--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,4 +56,4 @@ jobs:
       - name: check generated code
         shell: bash
         run: |
-          git diff --exit-code && echo 'ok!' || echo 'committed generated code is not up to date!'
+          git diff --exit-code && echo 'ok!' || (echo 'committed generated code is not up to date!'; exit 1)
