--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ bebop = { version = "2.4.9", optional = true }
 bincode1 = { package = "bincode", version = "1.3.3", optional = true }
 # Can't call it bincode2 because of a current issue of bincode2
 bincode = { package = "bincode", version = "2.0.0-rc", optional = true }
-bitcode = { version = "=0.6.0-alpha.2", optional = true }
+bitcode = { version = "0.6.0", optional = true }
 borsh = { version = "1.1.1", features = ["derive"], optional = true }
 # TODO: Unfork after bson adds support for pre-warmed serialization buffers
 # https://github.com/mongodb/bson-rust/pull/328
