--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,6 +92,8 @@ simd-json-derive = { version = "=0.13.0", optional = true }
 speedy = { version = "=0.8.7", optional = true }
 savefile = { version = "=0.16.5", optional = true }
 savefile-derive = { version = "=0.16.5", optional = true }
+tokio = { version = "1.37", features = ["full"], optional = true }
+wiring = { version = "0.1", optional = true }
 zstd = "=0.12.4"
 
 [features]
@@ -130,13 +132,15 @@ default = [
   "serde_json",
   "simd-json",
   "speedy",
-  "savefile"
+  "savefile",
+  "wiring"
 ]
 capnp = ["dep:capnp"]
 prost = ["dep:capnp", "dep:prost"]
 simd-json = ["dep:simd-json", "simd-json-derive"]
 savefile = ["dep:savefile", "savefile-derive"]
 scale = ["parity-scale-codec", "parity-scale-codec-derive"]
+wiring = ["dep:wiring", "dep:tokio", "criterion/async_tokio"]
 
 # Enable these features to regenerate generated files rather than using the committed versions.
 regenerate-capnp = ["dep:capnpc"]
