--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -48,6 +48,7 @@ jobs:
         run: |
 
           lscpu
+          rustc --version --verbose
 
           git config --global user.name github-actions
           git config --global user.email github-actions@github.com
