--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -41,6 +41,7 @@ jobs:
         uses: baptiste0928/cargo-install@v2
         with:
           crate: trunk
+          version: '0.19'
 
       - name: bench
         if: "!contains(github.event.head_commit.message, '[no-bench]')"
