--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,8 +79,7 @@ pot = { version = "=3.0.0", optional = true }
 pprof = { version = "=0.13.0", features = ["flamegraph"], optional = true }
 prost = { version = "=0.12.4", optional = true }
 rand = "=0.8.5"
-# TODO: unfork after rkyv updates to 0.8 or `stdsimd` cfg for nightly in aHash 0.7 is fixed
-rkyv = { version = "=0.7.44", git = "https://github.com/rkyv/rkyv", branch = "0.7-hashbrown-0.14", features = ["validation"], optional = true }
+rkyv = { version = "=0.7.44", features = ["validation"], optional = true }
 rmp-serde = { version = "=1.1.2", optional = true }
 ron = { version = "=0.8.1", optional = true }
 serde = { version = "=1.0.196", features = ["derive"], optional = true }
