--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,7 +60,7 @@ borsh = { version = "=1.5.1", features = ["derive"], optional = true }
 # https://github.com/mongodb/bson-rust/pull/328
 bson = { version = "=2.9.0", git = "https://github.com/djkoloski/bson-rust", branch = "add_into_vec", optional = true }
 bytecheck = { version = "=0.6.12", optional = true }
-bytemuck = { version = "=1.16.1", optional = true }
+bytemuck = { version = "=1.18.0", optional = true }
 capnp = { version = "=0.19.6", optional = true }
 cbor4ii = { version = "=0.3.2", features = [ "use_std", "serde1" ], optional = true }
 ciborium = { version = "=0.2.2", optional = true }
@@ -93,6 +93,7 @@ savefile = { version = "=0.17.6", optional = true }
 savefile-derive = { version = "=0.17.6", optional = true }
 wiring = { version = "=0.2.1", optional = true }
 zstd = "=0.13.2"
+fury = { git= "https://github.com/apache/incubator-fury.git", branch = "main" }
 
 [features]
 default = [
