--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,6 @@ borsh = { version = "=1.5.1", features = ["derive"], optional = true }
 # TODO: Unfork after bson adds support for pre-warmed serialization buffers
 # https://github.com/mongodb/bson-rust/pull/328
 bson = { version = "=2.9.0", git = "https://github.com/djkoloski/bson-rust", branch = "add_into_vec", optional = true }
-bytecheck = { version = "=0.6.12", optional = true }
 bytemuck = { version = "=1.16.1", optional = true }
 capnp = { version = "=0.19.6", optional = true }
 cbor4ii = { version = "=0.3.2", features = [ "use_std", "serde1" ], optional = true }
@@ -79,7 +78,7 @@ pot = { version = "=3.0.0", optional = true }
 pprof = { version = "=0.13.0", features = ["flamegraph"], optional = true }
 prost = { version = "=0.12.6", optional = true }
 rand = "=0.8.5"
-rkyv = { version = "=0.7.44", features = ["validation"], optional = true }
+rkyv = { version = "=0.8.3", optional = true }
 rmp-serde = { version = "=1.3.0", optional = true }
 ron = { version = "=0.8.1", optional = true }
 serde = { version = "=1.0.204", features = ["derive"], optional = true }
@@ -106,7 +105,6 @@ default = [
   "bitcode",
   "borsh",
   "bson",
-  "bytecheck",
   "bytemuck",
   "capnp",
   "cbor4ii",
