--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ bincode1 = { package = "bincode", version = "=1.3.3", optional = true }
 bincode = { package = "bincode", version = "=2.0.0-rc.3", optional = true }
 bitcode = { version = "=0.6.3", optional = true }
 borsh = { version = "=1.5.1", features = ["derive"], optional = true }
+brief = { version = "=0.1.0", features = ["std"], optional = true, path = "../brief" }
 capnp = { version = "=0.19.7", optional = true }
 cbor4ii = { version = "=0.3.3", features = [ "use_std", "serde1" ], optional = true }
 ciborium = { version = "=0.2.2", optional = true }
@@ -89,6 +90,7 @@ default = [
   "bincode",
   "bitcode",
   "borsh",
+  "brief",
   "capnp",
   "cbor4ii",
   "ciborium",
